--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
 
 body {
   display: flex;
@@ -11,12 +12,12 @@ body {
 }
 
 .App {
+  width: 600px;
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
   gap: 1rem;
 }
-
 
 .header-container {
   display: flex;
@@ -71,7 +72,6 @@ body {
 .collection-container {
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
   gap: 0.5rem;
   padding: 0.5rem;
   background-color: hsl(228, 7%, 14%);
@@ -79,16 +79,36 @@ body {
   border-radius: 0.3rem;
 }
 
-.collection-info {
+.collection-info-sub-container {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 0.25rem;
   padding: 0.5rem;
   border: 0.15rem solid hsl(240, 4%, 22%);
   border-radius: 0.3rem;
   background-color: hsl(225, 7%, 11%);
 }
 
-.collection-info-sub-container-one {
+.collection-toggle-button {
+  padding: 0.5rem;
+  border: 0.15rem solid hsl(240, 4%, 22%);
+  border-radius: 0.3rem;
+  background-color: inherit;
+  color: inherit;
+  line-height: normal;
+}
+
+.fa-solid {
+  background-color: inherit;
+  color: inherit;
+}
+
+.collection-toggle-button:hover {
+  color: hsl(221, 59%, 70%);
+  border: 0.15rem solid hsl(221, 59%, 70%);
+}
+
+.collection-title-sub-container {
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -96,6 +116,7 @@ body {
   border: 0.15rem solid hsl(240, 4%, 22%);
   border-radius: 0.3rem;
 }
+
 
 .collection-title-image {
   display: block;
@@ -111,8 +132,7 @@ body {
   font-weight: bold;
 }
 
-
-.collection-info-sub-container-two {
+.collection-total-sub-container {
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -122,7 +142,7 @@ body {
 }
 
 .collection-total-label {
-
+  
 }
 
 .collection-total{
@@ -131,7 +151,6 @@ body {
 
 .kata-container {
   display: flex;
-  flex-wrap: wrap;
   gap: 0.25rem;
   padding: 0.5rem;
   border: 0.15rem solid hsl(240, 4%, 22%);
@@ -139,8 +158,9 @@ body {
   background-color: hsl(225, 7%, 11%);
 }
 
-.kata-sub-container-one {
+.kata-sub-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 0.25rem;
 }
@@ -175,13 +195,7 @@ body {
   font-weight: bold;
 }
 
-.kata-sub-container-two {
-  display: flex;
-  align-items: center;
-  gap: 0.25rem;
-}
-
-.kata-complete {
+.kata-complete-image {
   border: 0.15rem solid hsl(240, 4%, 22%);
   border-radius: 0.3rem;
   width: 39px;
