--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 body {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   background-color: hsl(228, 10%, 10%);
   color: hsl(0, 0%, 94%);
   font-family: "Lato", sans-serif;
@@ -40,8 +39,8 @@ body {
 }
 
 .header-image{
-  width: 2.25rem;
-  height: 2.25rem;
+  /* width: 2.25rem;
+  height: 2.25rem; */
 }
 
 .header-title-link {
@@ -153,8 +152,6 @@ body {
 }
 
 .kata-container {
-  display: flex;
-  gap: 0.25rem;
   padding: 0.5rem;
   border: 0.15rem solid hsl(240, 4%, 22%);
   border-radius: 0.3rem;
@@ -164,7 +161,7 @@ body {
 .kata-sub-container {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  /* flex-direction: column; */
   gap: 0.25rem;
 }
 
